# objectpin

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/objectpin/: __init__.py  main.py  ui_main_window.py
src/objectpin/resources/: main_window.ui
