[project]
name = "objectpin"
version = "0.1.0"
description = "基于 PySide6 和 NVIDIA LocateAnything-3B 的本地图片目标定位桌面应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decord==0.6.0",
    "lmdb==1.7.5",
    "numpy==1.26.4",
    "opencv-python-headless==4.11.0.86",
    "peft>=0.19.1",
    "pillow==11.1.0",
    "pyside6>=6.11.1",
    "torch==2.9.1+xpu",
    "torchvision==0.24.1+xpu",
    "transformers==4.57.1",
]

[project.scripts]
objectpin = "objectpin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/objectpin"]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
